--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,137 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>XXX</title>
+    <title>Zambia</title>
     <script src="https://kit.fontawesome.com/fa7d412e6b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="http://ww2.peppercat.org/stylesheet.css">
   </head>
   <body>
-    <h1>XXX</h1>
+    <h1>Zambia</h1>
     <table>
+      <tr>
+        <td>President</td>
+        <td>Hakainde Hichilema</td>
+      </tr>
+      <tr>
+        <td>Vice President</td>
+        <td>Mutale Nalumango</td>
+      </tr>
+      <tr>
+        <td>Minister of Agriculture</td>
+        <td>Reuben Mtolo Phiri</td>
+      </tr>
+      <tr>
+        <td>Minister of Commerce, Trade and Industry</td>
+        <td>Chipoka Mulenga</td>
+      </tr>
+      <tr>
+        <td>Minister of Community Development and Social Welfare</td>
+        <td>Doreen Mwamba</td>
+      </tr>
+      <tr>
+        <td>Minister of Defence</td>
+        <td>Ambrose Lufuma</td>
+      </tr>
+      <tr>
+        <td>Minister of Energy</td>
+        <td>Peter Chibwe Kapala</td>
+      </tr>
+      <tr>
+        <td>Minister of Finance</td>
+        <td>Situmbeko Musokotwane</td>
+      </tr>
+      <tr>
+        <td>Minister of Fisheries and Livestock</td>
+        <td>Makozo Chikote</td>
+      </tr>
+      <tr>
+        <td>Minister of Foreign Affairs</td>
+        <td>Stanley Kakubo</td>
+      </tr>
+      <tr>
+        <td>Minister of General Education</td>
+        <td>Douglas Syakalima</td>
+      </tr>
+      <tr>
+        <td>Minister of Green Economy and Environment</td>
+        <td>Collins Nzovu</td>
+      </tr>
+      <tr>
+        <td>Minister of Health</td>
+        <td>Sylvia Masebo</td>
+      </tr>
+      <tr>
+        <td>Minister of Home Affairs</td>
+        <td>Jacob Mwiimbu</td>
+      </tr>
+      <tr>
+        <td>Minister of Information and Broadcasting</td>
+        <td>Chushi Kasanda</td>
+      </tr>
+      <tr>
+        <td>Minister of Infrastructure, Housing Urban and Development</td>
+        <td>Charles Milupi</td>
+      </tr>
+      <tr>
+        <td>Minister of Justice</td>
+        <td>Mulambo Hamakuni Haimbe</td>
+      </tr>
+      <tr>
+        <td>Minister of Labour and Social Security</td>
+        <td>Brenda Tambatamba</td>
+      </tr>
+      <tr>
+        <td>Minister of Lands and Natural Resources</td>
+        <td>Elijah Julaki Muchima</td>
+      </tr>
+      <tr>
+        <td>Minister of Local Government and Rural Development</td>
+        <td>Gary Nkombo</td>
+      </tr>
+      <tr>
+        <td>Minister of Mines and Minerals Development</td>
+        <td>Paul C C Kabuswe</td>
+      </tr>
+      <tr>
+        <td>Minister of Small and Medium Enterprises Development</td>
+        <td>Elias Mubanga</td>
+      </tr>
+      <tr>
+        <td>Minister of Technology and Science</td>
+        <td>Felix Mutati</td>
+      </tr>
+      <tr>
+        <td>Minister of Tourism</td>
+        <td>Rhodine Sikumba</td>
+      </tr>
+      <tr>
+        <td>Minister of Transport and Logistics</td>
+        <td>Frank Tayali</td>
+      </tr>
+      <tr>
+        <td>Minister of Water Development, Sanitation and Environmental Protection</td>
+        <td>Mike Mposha</td>
+      </tr>
+      <tr>
+        <td>Minister of Youth, Sport and Arts</td>
+        <td>Elvis Chishala Nkandu</td>
+      </tr>
+      <tr>
+        <td>Attorney General</td>
+        <td>Mulilo Kabesha</td>
+      </tr>
+      <tr>
+        <td>Speaker of the National Assembly</td>
+        <td>Nelly Mutti</td>
+      </tr>
+      <tr>
+        <td>Governor of the Central Bank</td>
+        <td>Denny Kalyalya</td>
+      </tr>
+      <tr>
+        <td>Commander of the Army</td>
+        <td>Dennis Sitali Alibuzwi</td>
+      </tr>
       <tr>
         <td colspan="2" class="download"><a class="fas fa-file-download" href="current.csv"> CSV</a></td>
       </tr>
